ch_20_final_server : rev 12 complete

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -3206,6 +3206,327 @@
     "    println!(\"Shutting down.\");\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-25: Shut down the server after serving two requests by exiting the loop\n",
+    "\n",
+    "You wouldn’t want a real-world web server to shut down after serving only two  \n",
+    "requests. This code just demonstrates that the graceful shutdown and cleanup is  \n",
+    "in working order.\n",
+    "\n",
+    "The take method is defined in the Iterator trait and limits the iteration to  \n",
+    "the first two items at most. The ThreadPool will go out of scope at the end of  \n",
+    "main, and the drop implementation will run.\n",
+    "\n",
+    "Start the server with cargo run, and make three requests. The third request  \n",
+    "should error, and in your terminal you should see output similar to this:  \n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling hello v0.1.0 (file:///projects/hello)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 1.0s\n",
+    "     Running `target/debug/hello`\n",
+    "Worker 0 got a job; executing.\n",
+    "Shutting down.\n",
+    "Shutting down worker 0\n",
+    "Worker 3 got a job; executing.\n",
+    "Worker 1 disconnected; shutting down.\n",
+    "Worker 2 disconnected; shutting down.\n",
+    "Worker 3 disconnected; shutting down.\n",
+    "Worker 0 disconnected; shutting down.\n",
+    "Shutting down worker 1\n",
+    "Shutting down worker 2\n",
+    "Shutting down worker 3\n",
+    "```\n",
+    "\n",
+    "You might see a different ordering of workers and messages printed. We can see  \n",
+    "how this code works from the messages:  \n",
+    "\n",
+    "- workers 0 and 3 got the first two requests.  \n",
+    "- The server stopped accepting connections after the second connection, and  \n",
+    "- the Drop implementation on ThreadPool starts executing before worker 3 even  \n",
+    "starts its job.  \n",
+    "- Dropping the sender disconnects all the workers and tells them to shut down.  \n",
+    "- The workers each print a message when they disconnect, and  \n",
+    "- then the thread pool calls join to wait for each worker thread to finish.\n",
+    "\n",
+    "Notice one interesting aspect of this particular execution:  \n",
+    "\n",
+    "- the ThreadPool dropped the sender,  \n",
+    "- and before any worker received an error,  \n",
+    "- we tried to join worker 0.  \n",
+    "- Worker 0 had not yet gotten an error from recv,  \n",
+    "- so the main thread blocked waiting for worker 0 to finish.  \n",
+    "- In the meantime, worker 3 received a job and then all threads received an  \n",
+    "error.  \n",
+    "- When worker 0 finished, the main thread waited for the rest of the workers to  \n",
+    "finish.  \n",
+    "- At that point, they had all exited their loops and stopped.\n",
+    "\n",
+    "Congrats! We’ve now completed our project; we have a basic web server that uses  \n",
+    "a thread pool to respond asynchronously. We’re able to perform a graceful  \n",
+    "shutdown of the server, which cleans up all the threads in the pool.\n",
+    "\n",
+    "Here’s the full code for reference:\n",
+    "\n",
+    "#### src/main.rs\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::prelude::*, // no need for BufReader?\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "    thread,\n",
+    "    time::Duration,\n",
+    "}\n",
+    "\n",
+    "fn handle_connection(mut stream: TcpStream){\n",
+    "    // @audit :why instead of BufReader::new(&mut stream)\n",
+    "    let mut buffer = [0; 1024];\n",
+    "    stream.read(&mut buffer).unwrap();\n",
+    "\n",
+    "    let get = b\"GET / HTTP/1.1\\r\\n\";\n",
+    "    let sleep = b\"GET /sleep HTTP/1.1\\r\\n\";\n",
+    "\n",
+    "    let (status_line, filename) = if buffer.starts_with(get){\n",
+    "        (\"HTTP/1.1 200 OK\", \"hello.html\")\n",
+    "    }\n",
+    "    else if buffer.starts_with(sleep){\n",
+    "        thread::sleep(Duration::from_secs(5));\n",
+    "        (\"HTTP/1.1 200 OK\", \"hello_sleep.html\")\n",
+    "    }\n",
+    "    else{\n",
+    "        (\"HTTP/1.1 404 NOT FOUND\", \"404.html\")\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "\n",
+    "    let response = format!(\n",
+    "        \"{}\\r\\nContent-Length: {}\\r\\n\\r\\n{}\",\n",
+    "        status_line,\n",
+    "        contents.len(),\n",
+    "        contents\n",
+    "    );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "    stream.flush().unwrap(); // @audit : Explain this\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### src/lib.rs\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    sync::{mpsc, Arc, Mutex},\n",
+    "    thread,\n",
+    "};\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers: Vec<Worker>,\n",
+    "    sender: Option<mpsc::Sender<Job>>,\n",
+    "}\n",
+    "\n",
+    "type Job = Box<dyn FnOnce() + Send + 'static>;\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    /// Create a new ThreadPool\n",
+    "    /// # Panics\n",
+    "    /// The 'new' function will panic if size < 1\n",
+    "    pub fn new(size:usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "        let receiver = Arc::new(Mutex::new(receiver));\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id, Arc::clone(&receiver)));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{\n",
+    "            workers,\n",
+    "            sender: Some(sender),\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f: F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static,\n",
+    "    {\n",
+    "        let job = Box::new(f);\n",
+    "        self.sender.as_ref().unwrap().send(job).unwrap(); // @audit : Explain\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// @audit ... explain explicit Drop trait for ThreadPool not needed?\n",
+    "impl Drop for ThreadPool{\n",
+    "    fn drop(&mut self){\n",
+    "        drop(self.sender.take());\n",
+    "\n",
+    "        for worker in &mut self.workers{\n",
+    "            println!(\"Shutting down worker {}\", worker.id);\n",
+    "\n",
+    "            // @audit : Explain what is happening here\n",
+    "            if let Some(thread) = worker.thread.take(){\n",
+    "                thread.join().unwrap();\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: Option<thread::JoinHandle<()>>,\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize, receiver: Arc<Mutex<mpsc::Receiver<Job>>>) -> Worker{\n",
+    "        let thread = thread::spawn(move || loop{\n",
+    "            // @audit : Explain this\n",
+    "            let message = receiver.lock().unwrap().recv();\n",
+    "\n",
+    "            match message{\n",
+    "                Ok(job) => {\n",
+    "                    println!(\"Worker {id} got a job -> executing\");\n",
+    "                    job();\n",
+    "                }\n",
+    "                Err(_) => {\n",
+    "                    println!(\"Worker {id} disconnected -> shutting down\");\n",
+    "                    break;\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "        });\n",
+    "\n",
+    "        Worker{\n",
+    "            id,\n",
+    "            thread: Some(thread),\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker 0 got a job -> executing\n",
+      "Shutting down.\n",
+      "Shutting down worker 0\n",
+      "Worker 1 got a job -> executing\n",
+      "Worker 3 disconnected -> shutting down\n",
+      "Worker 2 disconnected -> shutting down\n",
+      "Worker 0 disconnected -> shutting down\n",
+      "Shutting down worker 1\n",
+      "Worker 1 disconnected -> shutting down\n",
+      "Shutting down worker 2\n",
+      "Shutting down worker 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "    let pool = ThreadPool::new(4);\n",
+    "\n",
+    "    // @audit : Explain take(2)\n",
+    "    for stream in listener.incoming().take(2){\n",
+    "        let stream = stream.unwrap();\n",
+    "\n",
+    "        pool.execute(|| {\n",
+    "            handle_connection(stream);\n",
+    "        });\n",
+    "    }\n",
+    "\n",
+    "    println!(\"Shutting down.\");\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### EXTRA CREDIT IMPROVEMENTS\n",
+    "\n",
+    "We could do more here! If you want to continue enhancing this project, here are  \n",
+    "some ideas:\n",
+    "\n",
+    "- Add more documentation to ThreadPool and its public methods.\n",
+    "- Add tests of the library’s functionality.\n",
+    "- Change calls to unwrap to more robust error handling.\n",
+    "- Use ThreadPool to perform some task other than serving web requests.\n",
+    "- Find a thread pool crate on crates.io and implement a similar web server  \n",
+    "using the crate instead. Then compare its API and robustness to the thread pool  \n",
+    "we implemented."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary\n",
+    "---\n",
+    "\n",
+    "Well done! You’ve made it to the end of the book! We want to thank you for  \n",
+    "joining us on this tour of Rust. You’re now ready to implement your own Rust  \n",
+    "projects and help with other peoples’ projects. Keep in mind that there is a  \n",
+    "welcoming community of other Rustaceans who would love to help you with any  \n",
+    "challenges you encounter on your Rust journey."
+   ]
   }
  ],
  "metadata": {
