--- a/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
+++ b/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- GLOBAL IMPORTS ---"
+    "#### --- GLOBAL IMPORTS ---"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4  000016.jpg       bicycle      True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
