fastai mm : rev 2 DataFrame examples

--- a/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
+++ b/fastai_exercises/fast-ai-chapter06-other-computer-vision-problems.ipynb
@@ -5,12 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### --- GLOBAL IMPORTS ---"
+    "### -- GLOBAL IMPORTS --\n",
+    "\n",
+    "Is it possible to manage multiple labels per image with file/folder?\n",
+    "- Likely not worth it, since an explicity SIMPLE CSV list is easy to check  \n",
+    "- vs a more COMPLEX file/folder naming convention  \n",
+    "- (experience from managing Pokemon assets lol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +99,7 @@
        "4  000016.jpg       bicycle      True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,15 +107,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# uses CVS file to get the labels per image as opposed to file name and folder\n",
-    "# structure as conventions as previous single label datasets\n",
-    "# @audit-ok ☑  : Is it possible to manage multiple labels per image with file/folder?\n",
-    "# Answer : Likely not worth it, since explicity CSV list is easy to check vs\n",
-    "# super fancy naming convention (experience from managing Pokemon assets lol)\n",
+    "# uses CVS file to get the meta info for :  \n",
+    "# - labels per image \n",
+    "# - as opposed to deciphering from implicit folder and file name conventions\n",
     "df = pd.read_csv(path/'train.csv')\n",
-    "# inspect the CVS file by reading it into a Pandas DataFrame\n",
-    "# output shows that a list of categories in each image is shown as a space\n",
-    "# separated string\n",
+    "# Inspect the first 5 rows of the DataFrame using the head() method\n",
+    "# - The head() function is a convenience method for pandas DataFrame that allows  \n",
+    "#   quick preview the first N rows of your DataFrame : default is 5\n",
     "df.head()"
    ]
   },
@@ -119,12 +122,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- PANDAS and DATAFRAMES --- (scratchpad)"
+    "#### PANDAS and DATAFRAMES - (scratchpad)\n",
+    "\n",
+    "- Pandas is a Python library to edit and analyze tabular and time series data\n",
+    "- DataFrames are a table of rows and columns : the main data structure in Pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -153,10 +159,6 @@
     }
    ],
    "source": [
-    "# PANDAS and DATAFRAMES\n",
-    "# Pandas is a Python library to edit and analyze tabular and time series data\n",
-    "# DataFrames are a table of rows and columns : the main data structure in Pandas\n",
-    "\n",
     "# Trailing :s are optional (in numpy, pytorch, pandas, etc)\n",
     "# so both of these first row variants work\n",
     "# first_row = df.iloc[0,:]\n",
@@ -170,8 +172,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FASTAI : DataBlock (scratchpad)\n",
+    "\n",
+    "Explain how DataFrame separates a train and valid set\n",
+    "\n",
+    "- DataFrame DOES NOT! it's just a table of rows and columns ... but\n",
+    "- DataBlock does\n",
+    "\n",
+    "By default DataBlock is RANDOMLY split to : \n",
+    "\n",
+    "- 80% training set and  \n",
+    "- 20% validation set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -201,15 +221,15 @@
     {
      "data": {
       "text/plain": [
-       "(a     1\n",
-       " b    10\n",
-       " Name: 0, dtype: int64,\n",
-       " a     1\n",
-       " b    10\n",
-       " Name: 0, dtype: int64)"
+       "(a     2\n",
+       " b    20\n",
+       " Name: 1, dtype: int64,\n",
+       " a     2\n",
+       " b    20\n",
+       " Name: 1, dtype: int64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,9 +250,7 @@
     "# loading our df DataFrame into a DataBlock\n",
     "dsets = dblock.datasets(df1)\n",
     "dsets.train[0]\n",
-    "# @audit-ok ☑ : Explain how DataFrame separates a train and valid set\n",
-    "# Answer : DataFrame doesn't, it's just a table of rows and columns ... but\n",
-    "# DataBlock does, by default it RANDOMLY split into 80% train and 20% valid\n",
+    "\n",
     "# Use 'is_valid' column to specify a custom split and pass to splitter func\n",
     "#dsets.valid[0]"
    ]
@@ -242,12 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- DATABLOCK ---"
+    "#### -- DATABLOCK : load from DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -255,21 +273,21 @@
      "output_type": "stream",
      "text": [
       "--[train]--\n",
-      "(fname       007578.jpg\n",
-      "labels      dog person\n",
+      "(fname       004779.jpg\n",
+      "labels      car person\n",
       "is_valid         False\n",
-      "Name: 3821, dtype: object, fname       007578.jpg\n",
-      "labels      dog person\n",
+      "Name: 2391, dtype: object, fname       004779.jpg\n",
+      "labels      car person\n",
       "is_valid         False\n",
-      "Name: 3821, dtype: object)\n",
+      "Name: 2391, dtype: object)\n",
       "--[valid]--\n",
-      "(fname       005124.jpg\n",
-      "labels      cow person\n",
-      "is_valid         False\n",
-      "Name: 2567, dtype: object, fname       005124.jpg\n",
-      "labels      cow person\n",
-      "is_valid         False\n",
-      "Name: 2567, dtype: object)\n"
+      "(fname               002545.jpg\n",
+      "labels      person bottle sofa\n",
+      "is_valid                 False\n",
+      "Name: 1276, dtype: object, fname               002545.jpg\n",
+      "labels      person bottle sofa\n",
+      "is_valid                 False\n",
+      "Name: 1276, dtype: object)\n"
      ]
     }
    ],
