ch 7 state of the art model - chapter is short FIN

--- a/fastai_exercises/fast_ai_chapter07-state-of-the-art-model.ipynb
+++ b/fastai_exercises/fast_ai_chapter07-state-of-the-art-model.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " |████████████████████████████████████████| 100.00% [1557168128/1557161267 20:52<00:00]\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fastai.vision.all import *\n",
     "from fastai.vision.data import DataBlock\n",
@@ -194,6 +186,263 @@
     "# mean of 0 and a standard deviation of 1. This helps to ensure that all \n",
     "# features have the same scale and the model does not become biased or overly \n",
     "# sensitive to features with larger scales."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         1.663105    2.947168    0.370052  2:50:35                                          \n",
+      "1         1.251406    1.662431    0.453697  1:11:42                                          \n",
+      "2         0.947334    0.836982    0.738984  58:35                                          \n",
+      "3         0.740129    0.654092    0.799104  1:01:49                                        \n",
+      "4         0.607023    0.568175    0.824496  56:57                                          \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = xresnet50()\n",
+    "learn = Learner(\n",
+    "    dls,\n",
+    "    model,\n",
+    "    loss_func=CrossEntropyLossFlat(),\n",
+    "    metrics=accuracy\n",
+    ")\n",
+    "\n",
+    "# @audit-ok : 5 epoch is + 6 hours!  FIX THIS SOMEHOW!\n",
+    "learn.fit_one_cycle(5, 3e-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         2.192905    4.081844    0.252427  06:01                                          \n",
+      "1         1.530551    1.461747    0.522405  04:42                                          \n",
+      "2         1.210109    1.178366    0.629574  04:45                                          \n",
+      "3         1.161046    1.072473    0.663928  04:42                                          \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training at a much lower resolution than 224 x 224\n",
+    "dls = get_dls(12, 32) # @audit why batch size 128 instead of 64?\n",
+    "\n",
+    "learn = Learner(\n",
+    "    dls,\n",
+    "    xresnet50(n_out=dls.c), # @audit ... explain?\n",
+    "    loss_func=CrossEntropyLossFlat(),\n",
+    "    metrics=accuracy\n",
+    ")\n",
+    "\n",
+    "# @audit : Why are we only doing 4 instead of 5 epochs?\n",
+    "# - Is it because the smaller resolution is for more basic features?\n",
+    "# - And epoch 5 is for label correlated features?\n",
+    "learn.fit_one_cycle(4, 3e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         1.098922    1.004947    0.684839  08:00                                          \n",
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         0.941069    0.900726    0.706497  07:56                                          \n",
+      "1         0.956869    0.816833    0.733010  07:10                                          \n",
+      "2         0.932111    0.747074    0.761016  06:25                                          \n",
+      "3         0.830758    0.703328    0.768484  06:14                                          \n",
+      "4         0.787315    0.680215    0.778566  06:15                                          \n"
+     ]
+    }
+   ],
+   "source": [
+    "learn.dls = get_dls(12, 64)\n",
+    "\n",
+    "# fine tuning only the last epoch 5\n",
+    "# - effectively freezing the first 4 epochs\n",
+    "# - prevents forgetting the earlier base features\n",
+    "learn.fine_tune(5, 1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7785661220550537"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds, targs = learn.get_preds()\n",
+    "accuracy(preds, targs).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7785661220550537"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy(preds, targs).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "Epoch 1/4 :                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7979835867881775"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_tta, targs_tta = learn.tta()\n",
+    "accuracy(preds_tta, targs_tta).item()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -- MIXUP --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mixup manual code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         2.305844    2.109548    0.328977  04:44                                          \n",
+      "1         1.787737    1.607176    0.491038  04:47                                          \n",
+      "2         1.668271    1.575980    0.522031  04:42                                          \n",
+      "3         1.525355    1.190362    0.623973  52:01                                           \n",
+      "4         1.440893    1.248785    0.616878  05:58                                          \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = xresnet50(n_out=dls.c)\n",
+    "learn = Learner(\n",
+    "    dls,\n",
+    "    model,\n",
+    "    loss_func=CrossEntropyLossFlat(),\n",
+    "    metrics=accuracy,\n",
+    "    cbs=MixUp\n",
+    ")\n",
+    "\n",
+    "learn.fit_one_cycle(5, 3e-3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -- LABEL SMOOTHING --"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch     train_loss  valid_loss  accuracy  time    \n",
+      "0         2.143363    1.892292    0.442494  04:50                                          \n",
+      "1         1.658357    1.875266    0.495146  04:44                                          \n",
+      "2         1.560091    1.522520    0.582898  04:42                                          \n",
+      "3         1.394092    1.287970    0.679238  04:41                                          \n",
+      "4         1.335982    1.292297    0.692681  04:42                                          \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = xresnet50(n_out=dls.c)\n",
+    "learn = Learner(\n",
+    "    dls,\n",
+    "    model,\n",
+    "    loss_func=LabelSmoothingCrossEntropyFlat(),\n",
+    "    metrics=accuracy\n",
+    ")\n",
+    "\n",
+    "learn.fit_one_cycle(5, 3e-3)"
    ]
   }
  ],
