--- a/fastai_exercises/fast_ai_m1_fafo.ipynb
+++ b/fastai_exercises/fast_ai_m1_fafo.ipynb
@@ -38,9 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.backends.mps.is_available() {} torch.backends.mps.is_built() {} True True\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -150,10 +158,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.187388</td>\n",
-       "      <td>0.038587</td>\n",
-       "      <td>0.012855</td>\n",
-       "      <td>01:19</td>\n",
+       "      <td>0.189808</td>\n",
+       "      <td>0.048824</td>\n",
+       "      <td>0.016238</td>\n",
+       "      <td>01:15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -208,24 +216,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.091183</td>\n",
-       "      <td>0.043429</td>\n",
-       "      <td>0.011502</td>\n",
-       "      <td>01:34</td>\n",
+       "      <td>0.076415</td>\n",
+       "      <td>0.048879</td>\n",
+       "      <td>0.014208</td>\n",
+       "      <td>01:31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.040089</td>\n",
-       "      <td>0.025740</td>\n",
-       "      <td>0.009472</td>\n",
-       "      <td>01:37</td>\n",
+       "      <td>0.034932</td>\n",
+       "      <td>0.025453</td>\n",
+       "      <td>0.006766</td>\n",
+       "      <td>01:31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.020129</td>\n",
-       "      <td>0.023227</td>\n",
-       "      <td>0.009472</td>\n",
-       "      <td>01:35</td>\n",
+       "      <td>0.018568</td>\n",
+       "      <td>0.025486</td>\n",
+       "      <td>0.008119</td>\n",
+       "      <td>01:30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
